# biquad-ss

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  biquad.h  biquad_cascade.h  biquad_design.c  biquad_design.h  biquad_quick_test.m  cli.c  examples.c  test.c  test_output.txt
data/: data1.txt  data1_hpf.txt  data2.txt
